packages/theme-chalk/src/chip.scss
@use 'mixins/mixins' as *;
@use 'mixins/var' as *;
@use 'common/var' as *;

@include b(chip) {
  position: relative;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 28px;
  margin: 2px 2px 3px 0;
  border-radius: 20px;
  padding: 3px 10px 3px 6px;
  font-size: 0.7rem;
  border: 0;
  color: rgba(0, 0, 0, 0.7);
  background: rgb(240, 240, 240);
  cursor: default;

  @include e(text) {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
  }

  @include e(icon) {
    font-size: 0.8rem;
  }

  @include when(closable) {
    padding-right: 0;
  }

  @include when(transparent) {
    font-weight: 500;
  }

  @include e(close) {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 20px;
    height: 20px;
    margin: 0 4px;
    padding: 0;
    border: 0;
    border-radius: 50%;
    background: rgba(0, 0, 0, 0.15);
    color: rgb(255, 255, 255);
    cursor: pointer;
    transition: all 0.3s ease;
    flex-shrink: 0;
    appearance: none;
    -webkit-appearance: none;
    font: inherit;
    line-height: 1;

    .#{$namespace}-icon {
      font-size: 0.9rem;
      color: rgb(255, 255, 255);
    }

    &:hover {
      background: getColor(danger);

      .#{$namespace}-icon {
        color: rgb(255, 255, 255);
      }
    }
  }

  .#{$namespace}-avatar-content {
    width: 24px;
    height: 24px;
    margin: 2px 0;
    margin-left: -8px;
    margin-right: 4px;
    flex-shrink: 0;

    .#{$namespace}-avatar {
      background: rgba(0, 0, 0, 0.15);
    }

    .material-icons {
      margin-top: 0;
      font-size: 0.8rem;
    }

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      border-radius: inherit;
    }
  }

  @include when(colored) {
    .#{$namespace}-avatar-content .#{$namespace}-avatar {
      background: rgba(255, 255, 255, 0.2);
    }
  }

  @include when(hit) {
    background-color: transparent;
    border: 1px solid getColor(color, 0.5);
  }

  @each $type in (primary, success, warn, danger, dark, info) {
    @include m($type) {
      background: getColor($type);
      color: rgba(255, 255, 255, 0.9);

      @include when(transparent) {
        background: getColor($type, 0.15);
        color: getColor($type);
      }
    }
  }
}

